--- a/build.gradle
+++ b/build.gradle
@@ -29,18 +29,9 @@ test {
     useJUnitPlatform()
 }
 
-task sourceJar(type: Jar) {
-    classifier "sources"
-    from sourceSets.main.allJava
-}
-
-task javadocJar(type: Jar, dependsOn: javadoc) {
-    classifier "javadoc"
-    from javadoc
-}
-
-artifacts {
-    archives javadocJar, sourceJar
+java {
+    withJavadocJar()
+    withSourcesJar()
 }
 
 // Configure publishing to the Sonatype Maven Central repo
@@ -48,13 +39,6 @@ publishing {
     publications {
         mavenJava(MavenPublication) {
             from components.java
-
-            artifact(sourceJar) {
-                classifier = 'sources'
-            }
-            artifact(javadocJar) {
-                classifier = 'javadoc'
-            }
 
             pom {
                 name = 'Unit Conversion'
@@ -101,9 +85,10 @@ publishing {
     }
 }
 
-signing {
-    sign publishing.publications
-}
+// TODO
+//signing {
+//    sign publishing.publications
+//}
 
 /**
  * Try to locate a credential value (username or password) in the credentials store.
